This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX).

WinMerge 2.7.5.2
  Graphical improvements to location pane (#1770175)
  Remove MFC dependency from resource compiler (#1783581)
  BugFix: Renaming unique item (only other side) renamed parent folder (#1787816)
  Translation updates:
  - Traditional Chinese (r4473)

WinMerge 2.7.5.1
  HTML reports for file compare (#1739209)
  Ask confirmation when exiting with multiple windows open (#1757800)
  Translation updates:
  - Catalan (r4370)
  - Simplified Chinese (r4369)
  - Danish (r4360)
  - French (r4383)
  - Russian (r4421)
  - Slovak (r4413)
  - Swedish (r4412)

WinMerge 2.7.4 and earlier (also 2.6.x stable releases)
 See Changes.txt files in /Src and other folders.