@@ -5,6 +5,7 @@ to Subversion revision numbers (rXXXXX).
 WinMerge 2.7.5.2
   Graphical improvements to location pane (#1770175)
   Remove MFC dependency from resource compiler (#1783581)
+  Better multi-monitor support (split file view on monitor boundary) (#1788168)
   BugFix: Renaming unique item (only other side) renamed parent folder (#1787816)
   Translation updates:
   - Traditional Chinese (r4473)
